--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws4fetch": "^1.0.20",
     "chart.js": "^4.4.7",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
@@ -25,7 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run push-to-github && npm run deploy-cloudflare",
+    "push-to-github": "git push origin main",
+    "deploy-cloudflare": "npm run build && wrangler pages deploy ./build --project-name=affirmations-v3",
     "mobile": "npm --prefix mobile run start"
   },
   "eslintConfig": {
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
