--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@firebase/analytics": "^0.10.10",
+    "@react-three/drei": "^9.56.11",
+    "@react-three/fiber": "^8.13.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws4fetch": "^1.0.20",
     "chart.js": "^4.4.7",
     "firebase": "^11.0.2",
+    "framer-motion": "^12.6.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
